# thefoldwithin-earth

./: .gitignore  GITFIELD.md  README.md  app.js  build.js  build.mjs  config.json  dependabot.yml  index.html  main.js  package-lock.json  package.json  sanitize.js  solaria-generator.mjs  style.css  styles.css  util.js  wrangler.json
.gitfield/: .radicle-push-state  bitbucket.sigil.md  codeberg.sigil.md  gitea.sigil.md  github.sigil.md  gitlab.sigil.md  local.sigil.md  radicle.sigil.md  remember.sigil.md
.github/: project-config.yml
.github/ISSUE_TEMPLATE/: coherence-issue.yml  improvement.yml
.old/: README.md  build.mjs  mud.js  package-lock.json  package.json  render.js
.old2/: Cargo.toml  index.html
.old2/src/: lib.rs
.old2/static/: index.html  styles.css
benchmarks/: initial.json
blueprint/: The_Fold_Within_Earth-v2.3_Canonical_Minimal_Specification.md  The_Fold_Within_Earth-v2.3_Manifest_of_Files.md
content/: fieldnote-openwe.md
docs/: CODE_REVIEW.md  README.md  VIEW.md  coherence-system.md  fieldnote-template.md  philosophy.md  primer.md
genesis/: aether.json
posts/: posts.json  the-path-of-self.md  within-the-eternal-now.md
public/: app.js  app.jss  feed.xml  index.html  index.json  robots.txt  schema.jsonld  sitemap.xml  style.css  styles.css  the-game-of-life-lab.html  witness.js
schema/: metadata-templates.md
signatures/: posts_the-path-of-self.md.sig  rooms_fold-within-earth.md.sig  rooms_library-of-fold.md.sig
src/: config.ts
tools/: build.js  coherence-check.py  foldlint.js  generate-index.mjs  hash.js  scribe.js
(+113 files in other folders)
